--- a/index.html
+++ b/index.html
@@ -565,6 +565,17 @@
 
                     <!-- END FLASHSALE -->
 
+                    <!-- BANNER -->
+
+                    <div class="container-banner">
+                        <div class="banner-img">
+                            <a href="">
+                                <img src="/assest/imgs/banner.png" alt="">
+                            </a>
+                        </div>
+                    </div>
+                    <!-- END BANNER -->
+
                 </div>
             </div>
 
