--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 </div>
 
                 <div class="header-bottom_icon">
-
+                    <img src="assest/imgs/icons8-shopping-cart-32.png" alt="">
                 </div>
             
             </div>
@@ -584,12 +584,18 @@
                                 <div class="shopeemall-top_left--title">SHOPEE MALL</div>
                                 <div class="shopeemall-top_left--text">7 Ngày Miễn Phí Trả Hàng</div>
                                 <div class="shopeemall-top_left--text">Hàng Chính Hãng 100%</div>
-                                <div class="shopeemall-top_left--text">Miễn Phí Vận Chuyển</div>
+                                <div class="shopeemall-top_left--text">
+                                    <div class="shopeemall-top_left--text-img">
+
+                                        <img src="./assest/imgs/truck.png" alt="">
+                                    </div>
+                                    Miễn Phí Vận Chuyển</div>
                             </div>
 
                             <div class="shopeemall-top_right">
                                 <a href="">
                                     Xem Tất Cả
+                                    <img src="./assest/imgs/right-1.png" alt="">
                                 </a>
                             </div>
                         </div>
@@ -652,9 +658,80 @@
 
                     <!-- TOP SEARCH -->
 
-                    <div class="container-topsearch">
-                        
+                    <div class="container-topsearch bg-while">
+                        <div class="topsearch-top">
+                            <div class="topsearch-top_left">TÌM KIẾM HÀNG ĐẦU</div>
+                            <div class="topsearch-top_right">
+                                <a href="">
+                                    Xem Tất Cả
+                                </a>
+                            </div>
+                        </div>
+
+                        <div class="topsearch-bottom">
+                            <div class="topsearch-bottom_item">
+                                <div class="topsearch-bottom_item--img">
+                                    <img src="./assest/imgs/serach-img-1.jfif" alt="">
+                                    <div class="top-search-icon"></div>
+                                    <div class="monthlysales">Bán 50k+ / tháng</div>
+                                </div>
+
+                                <div class="topsearch-bottom_item--text">Bút Quay</div>
+                            </div>
+
+                            <div class="topsearch-bottom_item">
+                                <div class="topsearch-bottom_item--img">
+                                    <img src="./assest/imgs/serach-img-2.jfif" alt="">
+                                    <div class="top-search-icon"></div>
+                                    <div class="monthlysales">Bán 54k+ / tháng</div>
+                                </div>
+
+                                <div class="topsearch-bottom_item--text">Áo Hoodie Nỉ Nam</div>
+                            </div>
+
+                            <div class="topsearch-bottom_item">
+                                <div class="topsearch-bottom_item--img">
+                                    <img src="./assest/imgs/serach-img-3.jfif" alt="">
+                                    <div class="top-search-icon"></div>
+                                    <div class="monthlysales">Bán 55k+ / tháng</div>
+                                </div>
+
+                                <div class="topsearch-bottom_item--text">Sữa Rửa Mặt</div>
+                            </div>
+
+                            <div class="topsearch-bottom_item">
+                                <div class="topsearch-bottom_item--img">
+                                    <img src="./assest/imgs/serach-img-4.jfif" alt="">
+                                    <div class="top-search-icon"></div>
+                                    <div class="monthlysales">Bán 57k+ / tháng</div>
+                                </div>
+
+                                <div class="topsearch-bottom_item--text">Áo Gió Nam</div>
+                            </div>
+
+                            <div class="topsearch-bottom_item">
+                                <div class="topsearch-bottom_item--img">
+                                    <img src="./assest/imgs/serach-img-5.jfif" alt="">
+                                    <div class="top-search-icon"></div>
+                                    <div class="monthlysales">Bán 60k+ / tháng</div>
+                                </div>
+
+                                <div class="topsearch-bottom_item--text">Quần Âu Nam</div>
+                            </div>
+
+                            <div class="topsearch-bottom_item">
+                                <div class="topsearch-bottom_item--img">
+                                    <img src="./assest/imgs/serach-img-6.jfif" alt="">
+                                    <div class="top-search-icon"></div>
+                                    <div class="monthlysales">Bán 50k+ / tháng</div>
+                                </div>
+
+                                <div class="topsearch-bottom_item--text">Huyết thanh bình thường</div>
+                            </div>
+                        </div>
                     </div>
+
+                    <!-- END TOP SEARCH -->
 
                 </div>
             </div>
