--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
         <!-- END HEADER -->
 
-        <div class="center">
+        <div class="center pdt-120">
             <!-- SLIDER -->
             <div class="container-slider">
                 <div class="slider-left">
@@ -1426,6 +1426,7 @@
                     </div>
 
                     <!-- END SHOW PRODUCT -->
+
 
                 </div>
             </div>
