--- a/index.html
+++ b/index.html
@@ -3501,15 +3501,15 @@
                         </div>
 
                         <div class="policy-item">
-                            <a href="">CHÍNH SÁCH BẢO MẬT</a>
+                            <a href="">QUY CHẾ HOẠT ĐỘNG</a>
                         </div>
 
                         <div class="policy-item">
-                            <a href="">CHÍNH SÁCH BẢO MẬT</a>
+                            <a href="">CHÍNH SÁCH VẬN CHUYỂN</a>
                         </div>
 
                         <div class="policy-item">
-                            <a href="">CHÍNH SÁCH BẢO MẬT</a>
+                            <a href="">CHÍNH SÁCH TRẢ HÀNG VÀ HOÀN TIỀN</a>
                         </div>
                     </div>
 
