--- a/index.html
+++ b/index.html
@@ -124,31 +124,31 @@
                 <div class="container-slider-left">
                     <div class="slider-left">
                         <div class="slider-left_item">
-                            <img class="imgimg" src="/assest/imgs/slider-1.jfif" alt="img">
+                            <img class="imgimg" src="./assest/imgs/slider-1.jfif" alt="img">
                         </div>
                         <div class="slider-left_item">
-                            <img class="imgimg" src="/assest/imgs/banner-silder1.jfif" alt="img">
+                            <img class="imgimg" src="./assest/imgs/banner-silder1.jfif" alt="img">
                         </div>
                         <div class="slider-left_item">
-                            <img class="imgimg" src="/assest/imgs/banner-silder2.jfif" alt="img">
+                            <img class="imgimg" src="./assest/imgs/banner-silder2.jfif" alt="img">
                         </div>
                         <div class="slider-left_item">
-                            <img class="imgimg" src="/assest/imgs/banner-silder3.jfif" alt="img">
+                            <img class="imgimg" src="./assest/imgs/banner-silder3.jfif" alt="img">
                         </div>
                         <div class="slider-left_item">
-                            <img class="imgimg" src="/assest/imgs/banner-silder4.jfif" alt="img">
+                            <img class="imgimg" src="./assest/imgs/banner-silder4.jfif" alt="img">
                         </div>
                         <div class="slider-left_item">
-                            <img class="imgimg" src="/assest/imgs/banner-silder5.jfif" alt="img">
+                            <img class="imgimg" src="./assest/imgs/banner-silder5.jfif" alt="img">
                         </div>
                         <div class="slider-left_item">
-                            <img class="imgimg" src="/assest/imgs/banner-silder6.jfif" alt="img">
+                            <img class="imgimg" src="./assest/imgs/banner-silder6.jfif" alt="img">
                         </div>
                         <div class="slider-left_item">
-                            <img class="imgimg" src="/assest/imgs/banner-silder7.png" alt="img">
+                            <img class="imgimg" src="./assest/imgs/banner-silder7.png" alt="img">
                         </div>
                         <div class="slider-left_item">
-                            <img class="imgimg" src="/assest/imgs/banner-silder8.jfif" alt="img">
+                            <img class="imgimg" src="./assest/imgs/banner-silder8.jfif" alt="img">
                         </div>
 
                     </div>
