--- a/index.html
+++ b/index.html
@@ -536,9 +536,10 @@
                                 </div>
     
                                 <div class="flashsale-top_time">
-                                    <div class="flashsale-top_time--item">00</div>
-                                    <div class="flashsale-top_time--item">00</div>
-                                    <div class="flashsale-top_time--item">00</div>
+                                    <!-- <div id="days" class="flashsale-top_time--item">00</div> : -->
+                                    <div id="hours" class="flashsale-top_time--item">00</div> <b>:</b>
+                                    <div id="minutes" class="flashsale-top_time--item">00</div> <b>:</b>
+                                    <div id="seconds" class="flashsale-top_time--item">00</div>
                                 </div>
                             </div>
 
