--- a/assest/pageDetailsProduct/text-Commit-DetailsProduct/main/textCmIndexDetails.html
+++ b/assest/pageDetailsProduct/text-Commit-DetailsProduct/main/textCmIndexDetails.html
@@ -3327,6 +3327,6 @@
        <!-- END FOOTER -->
     </div>
 
-    <script src="/page/text-DetailProduct/asset/javascript/DetailProducts.js"></script>
+    <script src="/css/javascript.js"></script>
 </body>
 </html>
